--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -71,9 +71,9 @@ $gray-500: #8A92A5;
 //                $colors
 //);
 
-$app-primary: #ed1c24 !default;
+$app-primary: #E91E63 !default;
 $primary:       $app-primary;
-$secondary:     #E91E63;
+$secondary:     #ed1c24;
 $success:       #4caf50;
 $info:          #00bcd4;
 $warning:       #ff9800;
